fixed .heading-primary text overflow

--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body {
 }
 
 .hero {
-  width: 100%;
   height: 65vh;
   background-image: url(images/hero.jpg);
   background-size: cover;
@@ -33,15 +32,14 @@ body {
 
 .navigation {
   width: 75%;
-  background-image:
-    linear-gradient(
-      180deg,
-      #818581 0%,
-      #7c807c 20%,
-      #727272 50%,
-      #5f5f5f 50%,
-      #6d6d6d 95%
-    );
+  background-image: linear-gradient(
+    180deg,
+    #818581 0%,
+    #7c807c 20%,
+    #727272 50%,
+    #5f5f5f 50%,
+    #6d6d6d 95%
+  );
   height: 4rem;
   position: absolute;
   left: 50%;
@@ -99,14 +97,13 @@ body {
   font-family: inherit;
   display: inline-block;
   border-radius: 1rem;
-  background-image:
-    linear-gradient(
-      180deg,
-      #818581 0%,
-      #7c807c 20%,
-      #727272 50%,
-      #5f5f5f 50%
-    );
+  background-image: linear-gradient(
+    180deg,
+    #818581 0%,
+    #7c807c 20%,
+    #727272 50%,
+    #5f5f5f 50%
+  );
   height: 2.5rem;
   border: 1px solid #5f5f5f;
   padding-left: 2.5rem;
@@ -129,7 +126,7 @@ body {
 .hero__text {
   width: 80%;
   position: absolute;
-  top: 50%;
+  top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
@@ -162,7 +159,6 @@ body {
 }
 
 .footer {
-  width: 100%;
   padding: 3rem;
   font-size: 1rem;
   color: #666;
